<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp">

        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/open_image_rv"
                android:layout_margin="10dp"
                android:textAllCaps="false"
                android:id="@+id/openImageRv"
        />

        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/disable_image_cache"
                android:layout_margin="10dp"
                android:textAllCaps="false"
                android:id="@+id/disableImageCache"
        />

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="10dp"
        >

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/image_height"
                    android:id="@+id/imageHeight"
                    android:paddingLeft="10dp"
                    android:layout_weight="3"
                    tools:ignore="Autofill,RtlHardcoded,RtlSymmetry,TextFields"/>

            <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAllCaps="false"
                    android:text="@string/set_image_height"
                    android:id="@+id/setImageHeight"
                    android:layout_weight="4"
            />

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="10dp"
        >

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/image_width"
                    android:id="@+id/imageWidth"
                    android:paddingLeft="10dp"
                    android:layout_weight="3"
                    tools:ignore="Autofill,RtlHardcoded,RtlSymmetry,TextFields"/>

            <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAllCaps="false"
                    android:text="@string/set_image_width"
                    android:id="@+id/setImageWidth"
                    android:layout_weight="4"
            />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>